# cd3-binder-design

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  TODO.md  boltzgen_designs.json  config.yaml  config_test.yaml  pyproject.toml  requirements.txt
.ralph/: @AGENT.md  @fix_plan.md  PROMPT.md
data/fab_scaffolds/: adalimumab.6cr1.yaml  belimumab.5y9k.yaml  crenezumab.5vzy.yaml  dupilumab.6wgb.yaml  golimumab.5yoy.yaml  guselkumab.4m6m.yaml  mab1.3h42.yaml  necitumumab.6b3s.yaml  nirsevimab.5udc.yaml  sarilumab.8iow.yaml  secukinumab.6wio.yaml  tezepelumab.5j13.yaml  tralokinumab.5l6y.yaml  ustekinumab.3hmw.yaml
data/frameworks/: igg1_constant_regions.yaml  knob_hole_mutations.yaml  linkers.yaml  placeholder_targets.yaml
data/outputs/: calibration.json
data/starting_sequences/: README.md  affinity_mutations.yaml  sp34.yaml  teplizumab.yaml  ucht1.yaml
data/targets/: README.md
docs/reference/: bispecific-formats.md  calibration-methodology.md  implementation.md  repository-structure.md
modal/: README.md  __init__.py  abodybuilder_app.py  boltz2_app.py  boltzgen_app.py  hudiff_app.py  protenix_app.py
review/: Dockerfile  README.md  context_slices.yaml  extract_context.py  ralph_review.sh  readme_updates.md  run_review.sh  sandbox_review.sh  tracking.yaml
review/logs/: iteration_stats.tsv
review/prompts/: analysis.md  design.md  formatting.md  holistic.md  modal.md  pipeline.md  scripts.md  structure.md
scripts/: 00_run_calibration.py  01_setup_targets.py  02_run_denovo_design.py  03_run_optimization.py  04_predict_structures.py  04a_score_candidates.py  04b_humanize_candidates.py  05_filter_candidates.py  05b_validate_candidates.py  06_format_bispecifics.py  07_generate_report.py  README.md  analysis_metric_distributions.py  run_full_pipeline.py  setup_fab_scaffolds.py  verify_fab_chains.py
src/analysis/: README.md  affinity_scoring.py  antipasti_scoring.py  developability.py  humanization.py  humanness.py  liabilities.py  numbering.py
src/design/: README.md  __init__.py  affinity_variants.py  boltzgen_runner.py  denovo_design.py  optimization.py
src/formatting/: README.md  (+7 more)
tests/: test_filter_aggregation.py  test_humanness_scoring.py  test_numbering_fallback.py  test_scfv_offsets.py  test_scfv_parsing.py
(+117 files in other folders)
